# wang-file-searcher

./: .editorconfig  README.md  angular.json  package-lock.json  package.json
.github/workflows/: release-macos.yml  release-ubuntu.yml  release-windows.yml
.github/worlflows/: release-windows.yml
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: entity.rs  mod.rs  open_folder.rs  search.rs
src-tauri/src/search/: excludes.rs  find_string.rs  handler.rs  includes.rs  mod.rs  refines.rs  result.rs  validator.rs
src-tauri/src/utils/: file_utils.rs  mod.rs
src-tauri/tests/: test_walker.rs
src-tauri/tests/txt/: test-file1.txt  test1.txt  test2.txt
src-tauri/tests/txt/sub-folder-1-1/: 1-1-1.txt  1-1-2.txt
src/app/: app.component.html  app.component.ts  app.config.ts
src/app/common/: shared.module.ts
src/app/common/entity/: option.ts
src/app/common/pipes/: file-size.pipe.ts
src/app/common/store/: index.ts
src/app/modules/option/: option.action.ts  option.component.html  option.component.scss  option.component.ts  option.selector.ts  option.state.ts
src/app/modules/result/: result.component.html  result.component.ts  result.state.ts
src/app/modules/search/: search.state.ts
src/app/modules/status/: status.component.ts
src/app/modules/text-input/: text-input.component.ts
src/app/pages/content-input-group/: content-input-group.component.html  (+1 more)
src/app/shared/: location.ts  shared.module.ts
src/app/store/: index.ts
(+28 files in other folders)
